# UNICHEmediaEditorBackend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  compose.prod.yml  docker-compose.override.yml.example  docker-compose.yml  postman_collection.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_asset_source.py  0003_subtitle_media_type.py  0004_agent_tables.py  0005_asset_intermediate.py  0006_project_catalogue_link.py
app/: main.py
app/agent/: catalog.py  executor.py  llm.py  planner.py  schemas.py
app/api/: deps.py
app/api/v1/: agent.py  assets.py  capabilities.py  health.py  jobs.py  projects.py  router.py
app/capabilities/: context.py  definitions.py  registry.py
app/capabilities/handlers/: _util.py  audio_ops.py  audio_transcribe.py  audio_tts.py  base.py  compose_ops.py  image_caption.py  image_ops.py  not_implemented.py  video_ops.py
app/core/: config.py  database.py  errors.py  logging.py  security.py
app/models/: __init__.py  agent.py  asset.py  base.py  enums.py  job.py  project.py
app/providers/: base.py  factory.py  http.py  mock.py  openrouter.py
app/schemas/: agent.py  asset.py  capability.py  common.py  job.py  project.py
app/services/: agent.py  assets.py  catalogue_client.py  jobs.py  projects.py  storage.py
app/tools/: ffmpeg.py  imagemagick.py  pyscenedetect.py  realesrgan.py  runner.py
app/workers/: queue.py  tasks.py  worker.py
assets/realesrgan/: README.md
assets/rnnoise/: README.md
deploy/: deploy.sh  env.production.example  nginx.conf.example
frontend/: index.html
tests/: conftest.py  test_agent.py  test_assets.py  test_auth.py  test_capabilities.py  test_compose_capabilities.py  test_health.py  test_jobs.py  test_projects.py  test_providers.py  test_tool_capabilities.py
