[project]
name = "uniche-media-editor-backend"
version = "0.1.0"
description = "MVP backend for the UNICHE Media Editor (cultural-heritage media tooling)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "arq>=0.26",
    "redis>=5.2",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1",
    "jsonschema>=4.23",
    "pyjwt[crypto]>=2.9",
    "scenedetect>=0.6.4",
    # image.upscale: official PyTorch/CUDA Real-ESRGAN, see assets/realesrgan/README.md
    # for why this replaced the vendored ncnn-vulkan binary. numpy pinned <2: basicsr
    # (compiled against the numpy 1.x ABI) crashes on import under numpy 2.x.
    "numpy<2",
    "torch>=2.3,<2.4",
    "torchvision>=0.18,<0.19",
    "basicsr>=1.4.2",
    "facexlib>=0.3.0",
    "gfpgan>=1.3.8",
    "realesrgan>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# basicsr ships only an sdist (no prebuilt wheel) and needs torch + setuptools
# present in its isolated PEP 517 build environment (its own setup.py imports
# torch to detect CUDA availability); without this, uv tries to fetch an
# unpinned "latest" torch just for that build step instead of reusing the one
# already pinned above.
[tool.uv.extra-build-dependencies]
basicsr = ["setuptools", "torch", "numpy<2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # FastAPI uses function calls in argument defaults (Depends/File/etc.)

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
